// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Toggle> that renders a toggle should render Toggle correctly with label 1`] = `
<Toggle
  id="1"
>
  <label
    className="Toggle"
    htmlFor="1"
  >
    <div
      className="Toggle__toggleContainer"
    >
      <input
        className="Toggle__realCheckbox"
        disabled={false}
        id="1"
        type="checkbox"
      />
      <div
        className="Toggle__toggleButton"
      />
    </div>
    <Text
      className="Toggle__text"
      context="default"
      inline={true}
    >
      <span
        className="Toggle__text"
      >
        Title is here
      </span>
    </Text>
  </label>
</Toggle>
`;

exports[`<Toggle> that renders a toggle should render Toggle correctly without label 1`] = `
<Toggle
  id="1-2"
>
  <label
    className="Toggle"
    htmlFor="1-2"
  >
    <div
      className="Toggle__toggleContainer"
    >
      <input
        className="Toggle__realCheckbox"
        disabled={false}
        id="1-2"
        type="checkbox"
      />
      <div
        className="Toggle__toggleButton"
      />
    </div>
  </label>
</Toggle>
`;

exports[`<Toggle> that renders a toggle should rendered disabled toggle correctly 1`] = `
<Toggle
  disabled={true}
  id="4"
>
  <label
    className="Toggle Toggle--disabled"
    htmlFor="4"
  >
    <div
      className="Toggle__toggleContainer"
    >
      <input
        className="Toggle__realCheckbox"
        disabled={true}
        id="4"
        type="checkbox"
      />
      <div
        className="Toggle__toggleButton"
      />
    </div>
    <Text
      className="Toggle__text"
      context="muted"
      inline={true}
    >
      <span
        className="Text--context_muted Toggle__text"
      >
        Cannot do anything =(
      </span>
    </Text>
  </label>
</Toggle>
`;
